# gisbok

./: .gitignore  treeView.html
code/: EBK.csv  app_search.py  app_search_tfidf_original.py  embed_scibert.py  generate_test.py  gis_q.csv  gis_wordvectors.py  gisbok_ebk_link.py  gisbok_ebk_rank.py  gisbok_knowledgeArea_result.csv  gisbok_linkpredict.py  paper_tagging.py  wordcloud_basic.py
crawler/: .gitignore  crawl_topic_urls  parser.py  pyproject.toml  scraper with images  spider.py  topic_scraper
docs/: README.md  treeView.html
gispaper/: paper_crawler.py
spark/: PySparkMagClass.py  filterGIS.py  invertedIndex2string.py
